tests/macro-tests/cases/ui_node/delegate_expr_error_no_field.stderr
error[E0609]: no field `iner` on type `&mut Node<C>`
 --> cases/ui_node/delegate_expr_error_no_field.rs:6:32
  |
6 | #[ui_node(delegate = &mut self.iner)]
  |                                ^^^^ unknown field
  |
help: a field with a similar name exists
  |
6 - #[ui_node(delegate = &mut self.iner)]
6 + #[ui_node(delegate = &mut self.inner)]
  |
